(fix) check all boxes even for unvisible row done

--- a/src/dashboard/components/Checkbox/Checkbox.css
+++ b/src/dashboard/components/Checkbox/Checkbox.css
@@ -26,6 +26,10 @@
   transition: border-color 0.2s;
 }
 
+.checkbox-custom.header {
+  border: 2px solid var(--color-deep-blue);
+}
+
 .checkbox-input:checked + .checkbox-custom {
   border-color: var(--color-accent);
   background: var(--color-accent);
